@@ -28,6 +28,7 @@ t/00_CappedCollection/17_advance_cleanup_num.t
 t/00_CappedCollection/18_info.t
 t/00_CappedCollection/19_drop.t
 t/00_CappedCollection/20_cleaning.t
+t/00_CappedCollection/21_rollback.t
 t/tlib/Redis/CappedCollection/Test/Utils.pm
 xt/author/.perlcritic.rc
 xt/author/92_vars.t
