@@ -33,6 +33,7 @@ perl -MDevel::Cover t/00_CappedCollection/17_advance_cleanup_num.t
 perl -MDevel::Cover t/00_CappedCollection/18_info.t
 perl -MDevel::Cover t/00_CappedCollection/19_drop.t
 perl -MDevel::Cover t/00_CappedCollection/20_cleaning.t
+perl -MDevel::Cover t/00_CappedCollection/21_rollback.t
 perl -MDevel::Cover xt/release/00_CappedCollection/98_pod.t
 perl -MDevel::Cover xt/release/00_CappedCollection/99_pod_coverage.t
 
